--- a/buttonApp_2/app/templates/base.html
+++ b/buttonApp_2/app/templates/base.html
@@ -14,7 +14,7 @@
             <a href="{{ url_for('login') }}">Login</a>
             {% else %}
             <a href="{{ url_for('logout') }}">Logout</a>
-            <a href="{{ url_for('download') }}">Download</a>
+            <a href="{{ url_for('download') }}">Download My Data</a>
             {% endif %}
         </div>
         <hr>
