--- a/buttonApp_2/app/templates/download.html
+++ b/buttonApp_2/app/templates/download.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h1>Download, {{ current_user.username }}!</h1>
     <h1>{{ dynamic_data }}</h1>
 {% endblock %}
