--- a/buttonApp_2/app/templates/register.html
+++ b/buttonApp_2/app/templates/register.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
+    <h1>Register</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
+{% endblock %}
+
+<!--
+
+{% block temp_content %}
     <h1>Register</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
@@ -35,3 +47,4 @@
         <p>{{ form.submit() }}</p>
     </form>
 {% endblock %}
+-->
