--- a/buttonApp_2/app/templates/login.html
+++ b/buttonApp_2/app/templates/login.html
@@ -2,6 +2,26 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
+    <h1>What is Two Buttons?</h1>
+    <ul>
+        <li>This website, twobuttons.org, is a web interface for storing and analyzing your real time meditation data.</li>
+        <li>To use this website there is also a required Android app called "Two Buttons" which is used to collect data during meditation and send it over the internet to be stored at twobuttons.org.</li>
+        <li>To install the Android app follow the instructions at the Github repository <a href="https://github.com/mettinger/twoButtons">HERE</a>.</li>
+        <li>Here is a screenshot of the Android app:</li>
+        <img src="/static/twoButtonsScreenshot_2.jpg" alt="Android App Screenshot" width="400" height="200">
+        <li>The software is currently in very early alpha phase.  Data loss is possible.  Android app testing has been limited to Samsung Galaxy S8 so appearance on other devices may be funky.  Please send feedback to twobuttonsapp@gmail.com</li>
+        <li>Current features are quite basic and include downloading data for your own analysis and simple plotting.</li>
+        <li>Future planned developments include a data editing interface and more sophisticated analysis and visualisations.</li>
+        <li>Possible applications:</li>
+            <ul>
+                <li>Press a button at the end of a breath if the majority of your attention during that breath was on the meditation object.  This is intended to measure the presence or absence of "gross distraction" as explained in <a href="http://culadasa.com/">Culadasa's</a> book <a href="https://www.amazon.com/Mind-Illuminated-Meditation-Integrating-Mindfulness/dp/1501156985">The Mind Illuminated.</a></li>
+                <li>Press a button when you find yourself returning from forgetting the meditation object.</li>
+                <li>Use it in conjuction with the "noting" technique as, for example, <a href="https://www.shinzen.org/">Shinzen Young</a> describes in 
+                    <a href="https://www.shinzen.org/wp-content/uploads/2016/08/SeeHearFeelIntroduction_ver1.8.pdf">See Hear Feel: An Introduction</a></li>
+                <li>??????.  Repurpose as you see fit!  Use the "label" section of the Android app to record and seperate multiple applications.</li>
+            </ul>
+        <li>Support and Feedback: twobuttonsapp@gmail.com</li>
+    </ul>
     <h1>Sign In</h1>
     <div class="row">
         <div class="col-md-4">
