--- a/buttonApp_2/app/templates/login.html
+++ b/buttonApp_2/app/templates/login.html
@@ -5,11 +5,23 @@
     <h1>What is Two Buttons?</h1>
     <ul>
         <li>This website, twobuttons.org, is a web interface for storing and analyzing your real time meditation data.</li>
-        <li>To use this website there is also a required Android app called "Two Buttons" which is used to collect data during meditation and send it over the internet to be stored at twobuttons.org.</li>
-        <li>To install the Android app follow the instructions at the Github repository <a href="https://github.com/mettinger/twoButtons">HERE</a>.</li>
+        <li>To use this website there is also a required Android app called "Two Buttons" which is used to collect data during meditation and send it over the internet to be stored at twobuttons.org.  The data collected by the app are:
+            <ol>
+                <li>Date and time stamp.</li>
+                <li>Label of button pressed.</li>
+                <li>Text in "Label" field.  The user can store information in this field</li>
+                <li>User's identity.
+            </ol>
+        Each user only has access to his/her own data and data downloads consist of items 1-3 above.
+        </li>
         <li>Here is a screenshot of the Android app:</li>
         <img src="/static/twoButtonsScreenshot_2.jpg" alt="Android App Screenshot" width="400" height="200">
-        <li>The software is currently in very early alpha phase.  Data loss is possible.  Android app testing has been limited to Samsung Galaxy S8 so appearance on other devices may be funky.  Please send feedback to twobuttonsapp@gmail.com</li>
+        <li>Here are the steps for installing the Android app:</li>
+            <ol>
+                <li>Your Android device must permit installing apps from unknown sources.  You can allow this by going to Settings > Security on your phone and toggling the option to permit installing from unknown sources.  Installing from unknown sources is a SECURITY RISK so you should only do this when you trust the source.  You can also review the source code at the <a href="https://github.com/mettinger/twoButtons">Github repository.</a></li>
+                <li>From Chrome on your Android device, go to the link <a href="/install_android_app">twobuttons.org/install_android_app</a>.  Your phone will download the app and automatically install it after asking for and receiving permission.</li>
+            </ol>
+        <li><b>The software is currently in very early alpha phase.</b>  Data loss is possible.  Android app testing has been limited to Samsung Galaxy S8 so appearance on other devices may be funky.  <b>Thank you for your patience as we iron out the kinks.  Please send feedback to twobuttonsapp@gmail.com</b></li>
         <li>Current features are quite basic and include downloading data for your own analysis and simple plotting.</li>
         <li>Future planned developments include a data editing interface and more sophisticated analysis and visualisations.</li>
         <li>Possible applications:</li>
@@ -18,7 +30,7 @@
                 <li>Press a button when you find yourself returning from forgetting the meditation object.</li>
                 <li>Use it in conjuction with the "noting" technique as, for example, <a href="https://www.shinzen.org/">Shinzen Young</a> describes in 
                     <a href="https://www.shinzen.org/wp-content/uploads/2016/08/SeeHearFeelIntroduction_ver1.8.pdf">See Hear Feel: An Introduction</a></li>
-                <li>??????.  Repurpose as you see fit!  Use the "label" section of the Android app to record and seperate multiple applications.</li>
+                <li>??????.  Repurpose as you see fit!  Use the "label" section of the Android app to record and separate multiple applications.</li>
             </ul>
         <li>Support and Feedback: twobuttonsapp@gmail.com</li>
     </ul>
